--- a/index.html
+++ b/index.html
@@ -57,24 +57,36 @@
                 <h2 class="visually-hidden">Our advantages</h2>
                 <ul class="function-list">
                     <li class="function-item">
+                        <svg class="function-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-antenna"></use>
+                        </svg>
                         <h3 class="subtitle">Strategy</h3>
                         <p class="section-text">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
                     <li class="function-item">
+                        <svg class="function-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                        </svg>
                         <h3 class="subtitle">Punctuality</h3>
                         <p class="section-text">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
                     <li class="function-item">
+                        <svg class="function-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg>
                         <h3 class="subtitle">Diligence</h3>
                         <p class="section-text">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
                     <li class="function-item">
+                        <svg class="function-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg>
                         <h3 class="subtitle">Technologies</h3>
                         <p class="section-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -92,6 +104,36 @@
                             <div class="team-information">
                                 <h3 class="subtitle">Mark Guerrero</h3>
                                 <p class="section-text">Product Designer</p>
+                                <ul class="team-list-icon">
+                                    <li class="team-item-icon">
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -99,6 +141,36 @@
                             <div class="team-information">
                                 <h3 class="subtitle">Tom Ford</h3>
                                 <p class="section-text">Frontend Developer</p>
+                                <ul class="team-list-icon">
+                                    <li class="team-item-icon">
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -106,6 +178,36 @@
                             <div class="team-information">
                                 <h3 class="subtitle">Camila Garcia</h3>
                                 <p class="section-text">Marketing</p>
+                                <ul class="team-list-icon">
+                                    <li class="team-item-icon">
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -113,6 +215,36 @@
                             <div class="team-information">
                                 <h3 class="subtitle">Daniel Wilson</h3>
                                 <p class="section-text">UI Designer</p>
+                                <ul class="team-list-icon">
+                                    <li class="team-item-icon">
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="team-link">
+                                            <svg class="team-icon" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                     </ul>
@@ -176,6 +308,29 @@
                 sales for your business with digital
                 marketing & growth solutions.
             </p>
+            <h4>Social media</h4>
+            <ul>
+                <li><a href="">
+                    <svg class="footer-icon" width="24" height="24">
+                       <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a></li>
+                <li><a href="">
+                    <svg class="team-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a></li>
+                <li><a href="">
+                    <svg class="team-icon" width="24" height="24">
+                         <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a></li>
+                <li><a href="">
+                    <svg class="team-icon" width="24" height="24">
+                         <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a></li>
+            </ul>
         </div>
     </footer>
 </body>
