--- a/index.html
+++ b/index.html
@@ -57,36 +57,44 @@
                 <h2 class="visually-hidden">Our advantages</h2>
                 <ul class="function-list">
                     <li class="function-item">
-                        <svg class="function-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-antenna"></use>
-                        </svg>
+                        <div class="function-box-icon">
+                            <svg class="function-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="subtitle">Strategy</h3>
                         <p class="section-text">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
                     <li class="function-item">
-                        <svg class="function-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-clock"></use>
-                        </svg>
+                        <div class="function-box-icon">
+                            <svg class="function-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="subtitle">Punctuality</h3>
                         <p class="section-text">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
                     <li class="function-item">
-                        <svg class="function-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-diagram"></use>
-                        </svg>
+                        <div class="function-box-icon">
+                            <svg class="function-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="subtitle">Diligence</h3>
                         <p class="section-text">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
                     <li class="function-item">
-                        <svg class="function-icon" width="64" height="64">
-                            <use href="./images/icons.svg#icon-astronaut"></use>
-                        </svg>
+                        <div class="function-box-icon">
+                            <svg class="function-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="subtitle">Technologies</h3>
                         <p class="section-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -112,21 +120,21 @@
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -149,21 +157,21 @@
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -186,21 +194,21 @@
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -223,21 +231,21 @@
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="team-item-icon">
                                         <a href="" class="team-link">
                                             <svg class="team-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -255,42 +263,78 @@
                 <h2 class="portfolio-subtitle">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Banking App</h3>
                             <p class="section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-2.jpg" alt="Payment system" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-2.jpg" alt="Payment system" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Cashless Payment</h3>
                             <p class="section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-3.jpg" alt="Laptop and phone" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-3.jpg" alt="Laptop and phone" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Meditation App</h3>
                             <p class="section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-4.jpg" alt="Car driving" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-4.jpg" alt="Car driving" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Taxi Service</h3>
                             <p class="section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-5.jpg" alt="Mobile phone and screen" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-5.jpg" alt="Mobile phone and screen" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Screen Illustrations</h3>
                             <p class="section-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-6.jpg" alt="Woman in an orange sweater" width="360" height="300">
+                        <div class="portfolio-photo">
+                            <img src="./images/portfolio-6.jpg" alt="Woman in an orange sweater" width="360" height="300">
+                            <p class="portfolio-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-information">
                             <h3 class="subtitle">Online Courses</h3>
                             <p class="section-text">Marketing</p>
@@ -301,36 +345,48 @@
         </section>
     </main>
     <footer class="footer-content">
-        <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-gray">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and
-                sales for your business with digital
-                marketing & growth solutions.
-            </p>
-            <h4>Social media</h4>
-            <ul>
-                <li><a href="">
-                    <svg class="footer-icon" width="24" height="24">
-                       <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                </a></li>
-                <li><a href="">
-                    <svg class="team-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                </a></li>
-                <li><a href="">
-                    <svg class="team-icon" width="24" height="24">
-                         <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a></li>
-                <li><a href="">
-                    <svg class="team-icon" width="24" height="24">
-                         <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </a></li>
-            </ul>
+        <div class="container footer-container">
+            <div class="footer-one">
+                <a class="footer-logo" href="./index.html">Web<span class="footer-logo-gray">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and
+                    sales for your business with digital
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-text">Social media</p>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                        <svg class="footer-icon" width="24" height="24">
+                           <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                       </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                        <svg class="footer-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                        <svg class="footer-icon" width="24" height="24">
+                             <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                        <svg class="footer-icon" width="24" height="24">
+                             <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
